--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <input type="text" class="form-control" id="input" placeholder="Enter your artist song name">
                     <button class="btn btn-success search-button" id="search-btn">Search</button>
                 </div>
-                <div class=" text-center align-items-center">
+                <div class=" text-center align-items-center" id="clearDiv">
                     <button class="btn" id="clear">Clear</button>
                 </div>
             </div>
@@ -70,7 +70,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <!-- Custom Script Here -->
-    <script src="alu.js"></script>
+    <script src="main.js"></script>
 
 </body>
 
